lubuntu-default-settings (0.25) UNRELEASED; urgency=low

  * usr/share/lubuntu/openbox/rc.xml:
   - Add ability to use icons in the menu.
   - Add ability to use menu.xml in $HOME.

 -- Julien Lavergne <gilir@ubuntu.com>  Tue, 21 Feb 2012 01:07:43 +0100

lubuntu-default-settings (0.24) precise; urgency=low

  [ Julien Lavergne ]
  * usr/share/lubuntu/openbox/rc.xml
   - Remove workaround for lxpanel run dialog, now it's fixed in lxpanel.
   - Revert maximised windows by default, need more integration (LP: #926788)
  * debian/control:
   - Add a recommend for xscreensaver, for the locking shortcut (LP: #923001)
  * usr/share/lxpanel/profile/Lubuntu/panels/panel:
   - Set the color font of the panel to white to match the new theme.

  [ Colin Watson ]
  * Use maintscript support in dh_installdeb rather than writing out
    dpkg-maintscript-helper commands by hand.  We now simply Pre-Depend on a
    new enough version of dpkg rather than using 'dpkg-maintscript-helper
    supports' guards, leading to more predictable behaviour on upgrades.
    (LP: #932209)

  [ Alexander Andjelkovic ]
  * Fixed super-keys were conflicting with other keybinds making them useless.
    (LP: #890394)

 -- Julien Lavergne <gilir@ubuntu.com>  Sun, 19 Feb 2012 14:49:00 +0100

lubuntu-default-settings (0.23) precise; urgency=low

  * usr/share/lubuntu/openbox/menu.xml & rc.xml
   - Re-synchronize with upstream.
   - Workaround loose of focus of lxpanel run window (LP: #889414)
   - Add a rule to maximize all new windows with type normal.
   - Place new windows on the monitor with the mouse, rather than the primary
     monitor.
   - Use scrot -u -b (focused window with border) for the screenshot of the 
     current window.
   - Add a shortcut for the power button.
   - Use horizontal presentation of the alt-tab.
   - Add a shortcut to lock the screen (LP: #912499)
  * usr/bin/startlubuntu* & usr/share/lubuntu/xscreensaver/xscreensaver: