@@ -1,47 +1,220 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<openbox_menu xmlns="http://openbox.org/"
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://openbox.org/
-                file:///usr/share/openbox/menu.xsd">
+<openbox_menu xmlns="http://openbox.org/3.4/menu">
 
-<menu id="root-menu" label="Lubuntu">
-  <item label="PCManFM">
+<menu id="apps-accessories-menu" label="Accessories">
+  <item label="Calculator">
     <action name="Execute">
-    <startupnotify><enabled>yes</enabled><icon>pcmanfm</icon></startupnotify>
-    <command>pcmanfm</command></action>
+      <command>galculator</command>
+      <startupnotify>
+        <enabled>yes</enabled>
+      </startupnotify>
+    </action>
   </item>
-  <item label="Lxterminal">
-    <action name="Execute"><command>lxterminal</command></action>
+  <item label="Character Map">
+    <action name="Execute">
+      <command>gucharmap</command>
+      <startupnotify>
+        <enabled>yes</enabled>
+      </startupnotify>
+    </action>
   </item>
-  <item label="Browser">
-    <action name="Execute"><command>chromium-browser</command></action>
+  <item label="File Archiver">
+    <action name="Execute">
+      <command>file-roller</command>
+      <startupnotify>
+        <enabled>yes</enabled>
+      </startupnotify>
+    </action>
+  </item>
+  <item label="Leafpad">
+    <action name="Execute">
+      <command>leafpad</command>
+      <startupnotify>
+        <enabled>yes</enabled>
+      </startupnotify>
+    </action>
+  </item>
+  <item label="Image viewer">
+    <action name="Execute">
+      <command>gpicview</command>
+      <startupnotify>
+        <enabled>yes</enabled>
+      </startupnotify>
+    </action>
+  </item>
+  <item label="Disk utility">
+    <action name="Execute">
+      <command>palimpset</command>
+      <startupnotify>
+        <enabled>yes</enabled>
+      </startupnotify>
+    </action>
+  </item>
+  <item label="Xpad">
+    <action name="Execute">
+      <command>xpad</command>
+      <startupnotify>
+        <enabled>yes</enabled>
+      </startupnotify>
+    </action>
   </item>
 </menu>
-  <menu id="root-menu" label="Settings">
-  <separator label="Settings" />
-  <menu id="apps-menu" />
-  <separator />
-  <menu id="client-list-menu" />
-  <separator />
+
+<menu id="apps-net-menu" label="Internet">
+  <item label="Pidgin Instant Messenger">
+    <action name="Execute">
+      <command>pidgin</command>
+      <startupnotify>
+        <enabled>yes</enabled>
+      </startupnotify>
+    </action>
+  </item>
+  <item label="Sylpheed E-mail client">
+    <action name="Execute">
+      <command>sylpheed</command>
+      <startupnotify>
+        <enabled>yes</enabled>
+      </startupnotify>
+    </action>
+  </item>
+  <item label="Transmission torrent client">
+    <action name="Execute">
+      <command>transmission</command>
+      <startupnotify>
+        <enabled>yes</enabled>
+      </startupnotify>
+    </action>
+  </item>
+</menu>
+
+<menu id="apps-office-menu" label="Office">
+  <item label="Abiword">
+    <action name="Execute">
+      <command>abiword</command>
+    </action>
+  </item>
+  <item label="Gnumeric">
+    <action name="Execute">
+      <command>gnumeric</command>
+    </action>
+  </item>
+  <item label="Osmo">
+    <action name="Execute">
+      <command>osmo</command>
+    </action>
+  </item>
+  <item label="Evince">
+    <action name="Execute">
+      <command>evince</command>
+    </action>
+  </item>
+</menu>
+
+<menu id="apps-multimedia-menu" label="Multimedia">
+  <item label="Audacious">
+    <action name="Execute">
+      <command>audacious</command>
+      <startupnotify>
+        <enabled>yes</enabled>
+      </startupnotify>
+    </action>
+  </item>
+  <item label="Gnome-MPlayer">
+    <action name="Execute">
+      <command>gnome-mplayer</command>
+      <startupnotify>
+        <enabled>yes</enabled>
+      </startupnotify>
+    </action>
+  </item>
+  <item label="Xfburn">
+    <action name="Execute">
+      <command>xfburn</command>
+      <startupnotify>
+        <enabled>yes</enabled>
+      </startupnotify>
+    </action>
+  </item>
+  <item label="Webcam">
+    <action name="Execute">
+      <command>guvcview</command>
+      <startupnotify>
+        <enabled>yes</enabled>
+      </startupnotify>
+    </action>
+  </item>
+</menu>
+
+<menu id="system-menu" label="System">
+  <item label="System Preferences">
+    <action name="Execute">
+      <command>pcmanfm menu://applications/DesktopSettings</command>
+      <startupnotify><enabled>yes</enabled></startupnotify>
+    </action>
+  </item>
+  <item label="Administration">
+    <action name="Execute">
+      <command>pcmanfm menu://applications/Administration</command>
+      <startupnotify><enabled>yes</enabled></startupnotify>
+    </action>
+  </item>
   <item label="Desktop Settings">
     <action name="Execute">
-      <startupnotify><enabled>yes</enabled></startupnotify>
       <command>pcmanfm --desktop-pref</command>
+      <startupnotify><enabled>yes</enabled></startupnotify>
     </action>
   </item>
-  <item label="Window Management Settings">
+  <item label="Openbox Configuration Manager">
     <action name="Execute">
-      <startupnotify><enabled>yes</enabled><icon>openbox</icon></startupnotify>
       <command>obconf</command>
+      <startupnotify><enabled>yes</enabled></startupnotify>
     </action>
-  </item>
-  <item label="Reload Config Files">
-    <action name="Reconfigure" />
   </item>
   <separator />
-  <item label="Exit">
-    <action name="Execute"><command>lubuntu-logout</command></action>
+  <item label="Reconfigure Openbox">
+    <action name="Reconfigure" />
+  </item>
+</menu>
+
+<menu id="root-menu" label="Lubuntu">
+  <separator label="Shortcuts" />
+  <item label="PCMan File Manager" icon="/usr/share/icons/gnome/48x48/apps/system-file-manager.png">
+    <action name="Execute">
+      <command>pcmanfm</command>
+      <startupnotify>
+        <enabled>yes</enabled>
+      </startupnotify>
+    </action>
+  </item>
+  <item label="Terminal" icon="/usr/share/pixmaps/lxterminal.png">
+    <action name="Execute">
+      <command>lxterminal</command>
+      <startupnotify>
+        <enabled>yes</enabled>
+      </startupnotify>
+    </action>
+  </item>
+  <item label="Chromium" icon="/usr/share/icons/hicolor/48x48/apps/chromium-browser.png">
+    <action name="Execute">
+      <command>chromium-browser</command>
+      <startupnotify>
+        <enabled>yes</enabled>
+      </startupnotify>
+    </action>
+  </item>
+  <separator label="Applications" />
+  <menu id="apps-accessories-menu" icon="/usr/share/icons/gnome/48x48/categories/applications-accessories.png"/>
+  <menu id="apps-net-menu" icon="/usr/share/icons/gnome/48x48/categories/applications-internet.png"/>
+  <menu id="apps-office-menu" icon="/usr/share/icons/gnome/48x48/categories/applications-office.png"/>
+  <menu id="apps-multimedia-menu" icon="/usr/share/icons/gnome/48x48/categories/applications-multimedia.png"/>
+  <separator label="System" />
+  <menu id="system-menu" icon="/usr/share/icons/gnome/48x48/categories/applications-system.png" />
+  <separator />
+  <item label="Log Out">
+    <action name="Execute">
+      <command>lubuntu-logout</command>
+    </action>
   </item>
 </menu>
 
